# 07_scheduling_ai_chatbot

./: .gitignore  RAG_INTEGRATION.md  README.md  pyproject.toml  requirements.txt
docs/: 06_SERVER_CONFIGURATION_SET.md  RESTROSPECTIVE.md
docs/retrospective/: 03_transformer_update.md
rag_project/src/: main.py
rag_project/src/model/: generator.py  graph_extractor.py  graph_retriever.py  prompt_builder.py  retriever.py
scripts/: train.py
scripts/data/: korean_corpus.txt
src/: generate.py  main.py
src/custom_transformer/: transformer_model.py
src/custom_transformer/scripts/: train.py
src/custom_transformer/scripts/raw_data/: korean_qa_heldout.txt  korean_qa_train.txt
src/custom_transformer/scripts/utils/: evaluation.py  test_evaluation.py
src/model/: decoder_layer.py  multi_head_attention.py  transformer_model.py
src/rag_pipeline/: chunker.py  embedder.py  generator.py  graph_extractor.py  graph_retriever.py  vector_store.py
src/schemas/: schemas.py
src/tokenizer/: bpe_tokenizer.py
tests/: test_bpe_tokenizer.py  test_decoder_layer.py  test_full_pipeline.py  test_generate.py  test_multi_head_attention.py  test_positional_encoding.py  test_qa_collate.py  test_scaled_dot_product_attention.py  test_transformer_decoder.py  test_transformer_model.py
tests/rag_pipeline/: test_chunker.py  test_document_loader.py
