[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "korean-chatbot"
version = "0.1.0"
description = "From-scratch Transformer for Korean Chatbot"
authors = [{name = "Whale.lim(임경락)"}]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi>=0.139.2",
    "langchain-community>=0.4.2",
    "langchain-core>=1.5.0",
    "langchain-google-genai>=4.3.1",
    "langchain-huggingface>=1.2.2",
    "langchain-text-splitters>=1.1.2",
    "langgraph>=1.2.9",
    "langsmith>=0.10.10",
    "pillow>=12.3.0",
    "pydantic>=2.13.4",
    "pyright>=1.1.411",
    "pytest>=9.1.1",
    "sentence-transformers>=5.6.0",
    "torch>=2.13.0",
    "torchvision>=0.28.0",
    "transformers>=5.14.1",
    "uvicorn[standard]>=0.51.0",
]

[tool.setuptools.packages.find]
where = ["src"]          # src 폴더를 패키지 루트로 인식
[tool.pytest.ini_options]
markers = [
    "slow: 실제 모델(Gemma 등)을 로딩하는 무거운 테스트. 기본 실행에서는 -m \"not slow\"로 제외 가능.",
]

[tool.uv.sources]
torch = { index = "pytorch-cpu" }

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true